# Monitoring_System

./: .gitignore  CMakeLists.txt  loggerServer.sh  monitoringSystem.sh  readme.md  sensorClient.sh  startAll.sh  stopAll.sh
clients/: SensorClient.cpp
include/: DataManagerThread.hpp  NetworkThread.hpp
include/logging/: LogCommon.hpp  LogControl.hpp  LoggerClient.hpp
include/network/: TCPConnectionManager.hpp  TCPServer.hpp  TCPSession.hpp
include/plotting/: Plotter.hpp
include/sensor/: SensorData.hpp
services/: LoggerServer.cpp
src/: DataManagerThread.cpp  NetworkThread.cpp  main.cpp
src/logging/: setLogLevel.cpp
src/network/: TCPConnectionManager.cpp  TCPServer.cpp  TCPSession.cpp
src/plotting/: Plotter.cpp
utils/circularBuffer/: CircularBuffer.hpp  CircularBuffer.tpp
utils/kalmanFilter/: KalmanFilter.hpp  KalmanFilter.tpp
